# algorithms-and-data-structures

./: README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: main.yml
src/algorithms_and_data_structures/: binary_search.py  dynamic_programming.py  full_search.py  linear_search.py  recursive_call.py
tests/: test_binary_search.py  test_dynamic_programming.py  test_full_search.py  test_linear_search.py  test_recursive_call.py
