[tool.poetry]
name = "algorithms-and-data-structures"
version = "0.1.0"
description = "Python implementation for 'Algorithms and Data Structures: for training problem-solving skills'"
authors = ["Catminusminus <resonafolma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
